--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<h1> List of Songs> </h1>
+<h1> List of Songs </h1>
 
 <ul>
-  <li> <a href="/the-road-of-trials-1.html"> The Road of Trials 1 </a> </li>
+  <li> <a href="sky-music-examples/the-road-of-trials-1.html"> The Road of Trials 1 </a> </li>
 
 </ul>
 
