--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1> List of Songs </h1>
 
 <ul>
-  <li> <a href="sky-music-examples/the-road-of-trials-1.html"> The Road of Trials 1 </a> </li>
+  <li> <a href="/the-road-of-trials-1.html"> The Road of Trials 1 </a> </li>
 
 </ul>
 
