--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <title> Sky music exampkes</title>
+  <title> Sky music examples</title>
   <link href="main.css" rel="stylesheet" />
 </head>
 
