--- a/the-road-of-trials-2.html
+++ b/the-road-of-trials-2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>The Road of Trials (Intro)</title> <link href="main.css" rel="stylesheet" /> </head>
+<head> <title>The Road of Trials (Intro)</title> <link href="main-version-1.css" rel="stylesheet" /> </head>
 <body>
 
   <h1> <a href="https://t1-tracey.github.io/sky-music-examples/" > Home </a> </h1>
