--- a/The Road of Trials (Intro).html
+++ b/The Road of Trials (Intro).html
@@ -10,6 +10,10 @@
 <p>
   <b>Transcript:</b> Tracey.
 </p>
+  
+<p>
+<a href="https://t1-tracey.github.io/sky-music-examples/" > Go to Home </a>
+</p>
 
 <table class="harp harp-0"><tr><td><svg class="note-root harp-button-0 " xmlns="https://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 91 91">
 <path class="instrument-button " d="M90.7 76.5c0 7.8-6.3 14.2-14.2 14.2H14.2C6.4 90.7 0 84.4 0 76.5V14.2C0 6.4 6.3 0 14.2 0h62.3c7.8 0 14.2 6.3 14.2 14.2V76.5z"/>
