--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </ul>
 
 <p> Made by Tracey. SVGs thanks to madwurmz.</p>
-<p> Thanks to everyone for support :D </p>
+<p> Thanks to friends and everyone for encouragement <3 :D </p>
 
 </body>
 
