--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </ul>
 
-<p> Made by Tracey. SVGs thanks to madwurmz.</p>
+<p> Made by Tracey using [<a href="https://github.com/t1-tracey/sky-python-transcriber-2"> Sky Python Transcriber 2 </a>]. Design and SVGs thanks to madwurmz.</p>
 <p> Thanks to friends and everyone for encouragement <3 :D </p>
 
 </body>
