--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <h1> List of Songs </h1>
 
 <ul>
-  <li> <a href="./The-Road-of-Trials-Intro.html"> The Road of Trials (Cello Intro) </a> </li>
+  <li> <a href="./The-Road-of-Trials-Intro.html"> The Road of Trials - Journey (Cello Intro) </a> </li>
+  <li> <a href="./i-was-born-for-this.html"> I Was Born For This - Journey (Strings Intro) </a> </li>
+  
+</ul>
+  
+<ul>
   <li> <a href="./the-road-of-trials-2.html"> The Road of Trials (Cello Intro) - older styling </a> </li>
 
 </ul>
