--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   
 </ul>
   
+<h2> Old Styling </h2>
+  
 <ul>
   <li> <a href="./the-road-of-trials-2.html"> The Road of Trials (Cello Intro) - older styling </a> </li>
 
