--- a/i-was-born-for-this.html
+++ b/i-was-born-for-this.html
@@ -7,8 +7,9 @@
 <p> <b> Transcript:</b> Tracey </p>
 <p> <b> Recommended key:</b> B minor/D major </p>
 <p>
-  Green notes are played on off-beats. Watch <a href="https://www.youtube.com/watch?v=4B4VBHOt6Rc" target="_blank">YouTube video</a>.
+  Purple notes are played on off-beats. Watch <a href="https://www.youtube.com/watch?v=4B4VBHOt6Rc" target="_blank">YouTube video</a>.
 </p>
+  <p> 6 beats per line </p>
 <div id="transcript">
 
 <h2>1.</h2>
