--- a/i-was-born-for-this.html
+++ b/i-was-born-for-this.html
@@ -10,6 +10,11 @@
   Purple notes are played on off-beats. Watch <a href="https://www.youtube.com/watch?v=4B4VBHOt6Rc" target="_blank">YouTube video</a>.
 </p>
   <p> 6 beats per line </p>
+  
+<p>
+<a href="https://t1-tracey.github.io/sky-music-examples/" > Go to Home </a>
+</p>
+  
 <div id="transcript">
 
 <h2>1.</h2>
